--- a/sample1/pyproject.toml
+++ b/sample1/pyproject.toml
@@ -26,4 +26,5 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poe.tasks]
+force-cuda102 = "pip3 install torch torchvision torchaudio"
 force-cuda113 = "pip3 install torch==1.10.0+cu113 torchvision==0.11.1+cu113 torchaudio==0.10.0+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html"
